Migration du SDK RxNav avec URLHttpConnection.